spacing fixed

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -198,9 +198,13 @@
         main{
 
             #Features, #Team,#blog{
-                padding-top: 90px;
+                // padding-top: 90px;
                 height: 100vh;
             }
+
+            // #Features,#blog{
+            //     padding-top: 90px;
+            // }
 
             
 
@@ -209,6 +213,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                justify-content: center;
 
 
                 h2{
@@ -261,7 +266,7 @@
                 flex-direction: column;
                 align-items: center;
                 width: 100%;
-                background-color: lightgrey;
+                justify-content: center;
 
                 h2{
                     margin: 20px 0;
@@ -302,11 +307,8 @@
                                 position: absolute;
                                 width: 20%;
                                 height: 31%;
-                                // background: rgb(0,0,0,0.5) ;
-                                // color: #fff;
                                 visibility: hidden;
                                 opacity: 0;
-                                // border-radius: 5px;
                                 transition: opacity .2s, visibility .2s;
 
                                 display: flex;
@@ -314,16 +316,12 @@
                                 justify-content: center;
                                 transition: transform .5s;
                                 z-index: 1;
-                                left: 59px;
+                                left: 65px;
 
 
                                 a{
                                     cursor: pointer;
-                                    // position: absolute;
-                                    // bottom: 20px;
-                                    // right: 30px;
                                     font-size: large;
-                                    // display: inline-block;
                                     line-height: 35px;
                                     width: 35px;
                                     height: 35px;
@@ -431,6 +429,7 @@
                 flex-direction: column;
                 align-items: center;
                 width: 100%;
+                justify-content: center;
 
                 h2{
                     color: black;
